--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,11 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.cloud:spring-cloud-starter-consul-discovery'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-//    implementation 'org.springframework.boot:spring-boot-starter-security:2.4.3'
+    implementation 'org.springframework.boot:spring-boot-starter-security:2.4.3'
+    implementation 'com.microsoft.sqlserver:mssql-jdbc:8.4.1.jre8'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
