--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
-server:
-  port: 9990
-spring:
-  application:
-    name: gateway-service
-  cloud:
-    consul:
-      host: localhost
-      port: 8500
+#server:
+#  port: 9990
+#spring:
+#  application:
+#    name: gateway-service
+#  cloud:
+#    consul:
+#      host: localhost
+#      port: 8500
 #    gateway:
 #      routes:
 #        - id: market-service
