--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: gateway-service
   cloud:
     consul:
-      host: ${DISCOVERY_IP}
+      host: 13.82.103.66
       port: 8500
   datasource:
     driver-class: com.microsoft.sqlserver.jdbc.SQLserverDriver
@@ -24,10 +24,10 @@ server:
   port: 9990
 spring:
   application:
-    name: gateway-service
+    name: gateway-service-dev
   cloud:
     consul:
-      host: localhost
+      host: 13.82.103.66
       port: 8500
   config:
     activate:
