Updating jenkinsfile to pull from master

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
     name: gateway-service-dev
   cloud:
     consul:
-      host: 13.82.103.66
+      host: localhost
       port: 8500
   config:
     activate:
