Setting up template for gateway routing

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,21 @@ spring:
     consul:
       host: 13.82.103.66
       port: 8500
+    gateway:
+      routes:
+        - id: batch-service
+          uri: lb://batch-service
+          predicates:
+            - Path=/batches/**
+        - id: curriculum-service
+          uri: lb://curriculum-service
+          predicates:
+            - Path=/curriculum/**
+            - Path=/batch-days/**
+    #        - id: curriculum-service
+    #            uri: lb://curriculum-service
+    #            predicates:
+    #              - Path=/batch-days/**
   datasource:
     driver-class: com.microsoft.sqlserver.jdbc.SQLserverDriver
     url: ${DB_URL}
@@ -17,6 +32,8 @@ spring:
       generate-ddl: true
       hibernate:
         ddl-auto: update
+
+
 
 ---
 
@@ -29,6 +46,21 @@ spring:
     consul:
       host: localhost
       port: 8500
+    gateway:
+      routes:
+        - id: batch-service
+          uri: lb://batch-service-8083
+          predicates:
+            - Path=/batches/**
+        - id: curriculum-service
+          uri: lb://curriculum-service
+          predicates:
+            - Path=/curriculum/**
+            - Path=/batch-days/**
+      #        - id: curriculum-service
+      #            uri: lb://curriculum-service
+      #            predicates:
+      #              - Path=/batch-days/**
   config:
     activate:
       on-profile: dev
