Finished all Curriculum Controller methods

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,27 +18,27 @@ spring:
     hibernate:
       ddl-auto: validate
 
----
-
-server:
-  port: 9990
-spring:
-  application:
-    name: gateway-service
-  cloud:
-    consul:
-      host: 13.82.103.66
-      port: 8500
-  config:
-    activate:
-      on-profile: prod
-  datasource:
-    driver-class: com.microsoft.sqlserver.jdbc.SQLserverDriver
-    url: ${DB_URL}
-    username: ${DB_USER}
-    password: ${DB_PASS}
-    jpa:
-      show-sql: true
-      generate-ddl: true
-      hibernate:
-        ddl-auto: update
+#---
+#
+#server:
+#  port: 9990
+#spring:
+#  application:
+#    name: gateway-service
+#  cloud:
+#    consul:
+#      host: 13.82.103.66
+#      port: 8500
+#  config:
+#    activate:
+#      on-profile: prod
+#  datasource:
+#    driver-class: com.microsoft.sqlserver.jdbc.SQLserverDriver
+#    url: ${DB_URL}
+#    username: ${DB_USER}
+#    password: ${DB_PASS}
+#    jpa:
+#      show-sql: true
+#      generate-ddl: true
+#      hibernate:
+#        ddl-auto: update
